add create post

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,12 +6,35 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-.comment {
+ul {
+  list-style: none;
+}
+
+ul.post-actions {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  overflow-x: hidden;
+  justify-content: right;
+}
+.post-actions li {
+  padding: 0 10px;
+}
+
+.comment-list li {
+  padding: 15px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.1);
+  margin: 18px;
+  border-radius: 15px;
+}
+.comment-form {
   padding-left: 18px;
   padding-bottom: 10px;
 
 }
-.comment header {
+.comment-form header {
   color: #0051ff;
   border-bottom: 1px solid #bfbfbf;
   padding-bottom: 10px;
@@ -47,7 +70,7 @@ body{
   height: auto;
   overflow: hidden;
   padding: 10px;
-  margin: 10px;
+  margin: 10px 0px;
 
 }
 
@@ -59,13 +82,16 @@ body{
   height: 590px;
 }
 .container .wrapper{
-  width: 1000px;
+  /*width: 1000px;*/
+  width: 100%;
   display: flex;
   flex-direction: column;
   row-gap: 20px;
+  position: relative;
 }
 .container .wrapper section{
-  width: 800px;
+  /*width: 800px;*/
+  width: 100%;
   background: #fff;
 }
 .container img{
@@ -131,10 +157,10 @@ form :where(textarea, button){
   border: none;
 }
 
-.comment form :where(textarea) {
+.comment-form form :where(textarea) {
   border-style: 1px solid black;
 }
-.comment from textarea {
+.comment-form from textarea {
   min-height: 50px;
 }
 form textarea{
